--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
             </tr>
         </table>
         <hr>
-        <h3><b>Achievements</b></h3>
-        <ul>
-            <li>Recording</li>
-            <li>PPT</li>
-        </ul>
-        <h3><a href="hobbies.html">My Hobbies</a></h3>
-        <h3><a href="contact.html">Contact Me</a></h3>
-        <hr>
-        <table>
+        <table cellspacing="10">
             <thead>
                 <tr>
                     <th>Name</th>
@@ -37,11 +29,30 @@
                     <td>IT</td>
                 </tr>
             </tbody>
-
-            <tfoot>
-                
-            </tfoot>
-            
         </table>
+        <h3><b>Achievements</b></h3>
+        <ul>
+            <li>Recording</li>
+            <li>PPT</li>
+        </ul>
+        <hr>
+        <h3><b>Skills</b></h3>
+        <table cellspacing="10">
+            <tr>
+                <td>HTML</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>⭐⭐⭐⭐⭐</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>⭐⭐⭐</td>
+            </tr>
+        </table>
+        <hr>
+        <a href="hobbies.html">My Hobbies</a><br>
+        <a href="contact.html">Contact Me</a>
     </body>
 </html>
