--- a/hobbies.html
+++ b/hobbies.html
@@ -2,11 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>My hobbies</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table>
@@ -23,7 +20,7 @@
             <li>manga</li>
             <li>novel
                 <ol type="a">
-                    <li><a href="https://manhuaplus.com/manga/martial-peak/chapter-3627/">Martial Peak</a></li>
+                    <li><a href="https://manhuaplus.com/manga/martial-peak">Martial Peak</a></li>
                     <li>Banished disciple's counterattack</li>
                     <li>Naruto</li>
                 </ol>
