--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Vk website</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table cellspacing="20">
